test/error/index_out_of_range.imp
# Simple index out of range error test
PROGRAM IS
    t[5]
IN
    READ t[0];
    READ t[5];
END
